--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,9 @@
 {
+  "presets": [
+    [
+      "@babel/preset-react"
+    ],
+    ["@babel/preset-env", {"modules": false} ]
 
-    "presets": ["@babel/preset-react", "@babel/preset-env"]
+  ]
 }
