--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ build/Release
 # Dependency directories
 node_modules
 jspm_packages
+src/website-demo-images
 
 # Optional npm cache directory
 .npm
