--- a/package.json
+++ b/package.json
@@ -2,29 +2,36 @@
   "name": "responsive_music_website",
   "version": "1.0.0",
   "description": "",
+  "module": "es5",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --hot --open",
-    "build": "webpack --config webpack.config.js --mode production"
+    "start": "webpack-dev-server --hot --open --mode=development",
+    "build": "webpack --config webpack.prod.js"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "@babel/core": "^7.23.2",
     "@babel/preset-env": "^7.23.2",
-    "@babel/preset-react": "^7.22.15",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "babel-loader": "^9.1.3",
+    "babel-plugin-macros": "^3.1.0",
     "css-loader": "^6.8.1",
     "file-loader": "^6.2.0",
+    "mini-css-extract-plugin": "^2.7.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "style-loader": "^3.3.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-dev-server": "^4.15.1",
+    "webpack-merge": "^5.10.0"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.22.15",
     "html-webpack-plugin": "^5.5.3"
   }
 }
